--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@varlet/ui": "^1.27.20",
     "cesium": "^1.95.0",
     "core-js": "^3.8.3",
     "vant": "^3.5.2",
