--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "@varlet/ui": "^1.27.20",
     "cesium": "^1.95.0",
     "core-js": "^3.8.3",
+    "https-browserify": "^1.0.0",
+    "stream": "^0.0.2",
+    "stream-http": "^3.2.0",
+    "timers": "^0.1.1",
     "vant": "^3.5.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
+  },
+  "browser": {
+    "http": false,
+    "https": false
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
